--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "cross-env": "^3.1.3",
+    "css-loader": "^0.28.4",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-formatter-pretty": "^1.1.0",
@@ -41,7 +42,8 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
     "react-transform-hmr": "^1.0.4",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
