--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "promise/catch-or-return": 2,
     "promise/no-native": 0,
     "quotes": 0,
+    "react/jsx-boolean-value": 0,
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": "off"
