--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "fixed-data-table": "^0.6.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
