--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "url": "https://github.com/concord-consortium/geniventure-dashboard/issues"
   },
   "dependencies": {
+    "aphrodite": "^1.2.3",
     "babel-runtime": "^6.20.0",
-    "fixed-data-table": "^0.6.4",
+    "fixed-data-table-2": "^0.8.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
