--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "aphrodite": "^1.2.3",
     "babel-runtime": "^6.20.0",
     "fixed-data-table-2": "^0.8.0",
+    "prop-types": "^15.5.10",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-transition-group": "1.x"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
