--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fixed-data-table-2": "^0.8.0",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.1",
     "react-transition-group": "1.x"
   },
