--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^15.4.1",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.1",
-    "react-transition-group": "1.x"
+    "react-transition-group": "1.x",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
