--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^15.4.1",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.1",
+    "react-portal": "^4.1.5",
     "react-transition-group": "1.x",
     "whatwg-fetch": "^2.0.3"
   },
