--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 sudo: false
-
 language: node_js
-
 node_js:
   - node
   - 6
   - 4
-
-cache: yarn
+install:
+- travis_retry gem install s3_website -v 3.4.0
+- travis_retry pip install awscli --upgrade --user
+- travis_retry npm install
+before_script: npm run build
+script:
+  - travis_retry npm test
+  - ./deploy/s3_deploy.sh
+cache:
+  bundler: true
+  directories:
+    - node_modules
