--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ install:
 - travis_retry gem install s3_website -v 3.4.0
 - travis_retry pip install awscli --upgrade --user
 - travis_retry npm install
-before_script: npm run build
-script:
-  - ./deploy/s3_deploy.sh
+script: npm run build
+after_script: ./deploy/s3_deploy.sh
 cache:
   bundler: true
   directories:
