--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aphrodite": "^1.2.3",
     "babel-runtime": "^6.20.0",
     "fixed-data-table-2": "^0.8.0",
+    "lodash": "^4.17.11",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
     "react-dimensions": "^1.3.0",
