--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,21 @@
     "react/jsx-boolean-value": 0,
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
-    "react/prefer-stateless-function": "off"
+    "react/prefer-stateless-function": "off",
+    "react/forbid-prop-types": "off",
+    "react/no-unescaped-entities": "off",
+    "react/jsx-first-prop-new-line":"off",
+    "react/no-multi-comp":"off",
+    "no-param-reassign":"off",
+    "no-extra-boolean-cast":"off",
+    "no-else-return":"off",
+    "class-methods-use-this":"off",
+    "max-len":"off",
+    "no-cond-assign":"off",
+    "no-plusplus":"off",
+    "arrow-body-style":"off",
+    "prefer-template":"off",
+    "jsx-a11y/no-static-element-interactions":"off",
+    "no-nested-ternary":"off"
   }
 }
