--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "cross-env BABEL_ENV=production ./node_modules/.bin/webpack --config webpack.config.production.js",
-    "lint": "eslint --cache --ignore-path .gitignore --format=node_modules/eslint-formatter-pretty . *.js",
+    "lint": "eslint --cache --ignore-path .gitignore --ignore-pattern 'static' . *.js",
     "test": "npm run lint"
   },
   "author": "Sam Fentress <sfentress@concord.org>",
@@ -42,13 +42,10 @@
     "babel-preset-stage-0": "^6.16.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.4",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-formatter-pretty": "^1.1.0",
+    "eslint": "^3.19.0",
     "eslint-plugin-compat": "^0.1.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^6.8.0",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.18.2",
