--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf dist",
     "start": "node server.js",
-    "build": "cross-env BABEL_ENV=production ./node_modules/.bin/webpack --config webpack.config.production.js",
-    "lint": "eslint --cache --ignore-path .gitignore --ignore-pattern 'static' . *.js",
+    "build": "npm-run-all clean build:production",
+    "build:production": "cross-env BABEL_ENV=production webpack --config webpack.config.production.js",
+    "lint": "eslint --cache --ignore-path .gitignore --ignore-pattern 'dist' . *.js",
     "test": "npm run lint"
   },
   "author": "Sam Fentress <sfentress@concord.org>",
@@ -40,6 +42,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "copy-webpack-plugin": "4.6.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
@@ -47,7 +50,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^6.8.0",
+    "npm-run-all": "^4.1.5",
     "react-transform-hmr": "^1.0.4",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.18.2",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^1.16.5"
