--- a/package.json
+++ b/package.json
@@ -20,36 +20,36 @@
     "url": "https://github.com/concord-consortium/geniventure-dashboard/issues"
   },
   "dependencies": {
-    "aphrodite": "^1.2.3",
-    "babel-runtime": "^6.20.0",
-    "fixed-data-table-2": "^0.8.0",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "fixed-data-table-2": "^0.8.22",
     "lodash": "^4.17.11",
     "parse-full-name": "^1.2.3",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.1",
-    "react-dimensions": "^1.3.0",
-    "react-dom": "^15.4.1",
-    "react-portal": "^4.1.5",
-    "react-transition-group": "1.x",
-    "whatwg-fetch": "^2.0.3"
+    "prop-types": "^15.7.2",
+    "react": "^15.6.2",
+    "react-dimensions": "^1.3.1",
+    "react-dom": "^15.6.2",
+    "react-portal": "^4.2.0",
+    "react-transition-group": "^1.2.1",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "aphrodite": "^1.2.5",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^6.4.1",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "4.6.0",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.28.4",
+    "cross-env": "^3.2.4",
+    "css-loader": "^0.28.11",
     "eslint": "^3.19.0",
-    "eslint-plugin-compat": "^0.1.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-compat": "^0.1.3",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^6.10.3",
     "npm-run-all": "^4.1.5",
     "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.6.3",
