--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,10 @@
 {
   "presets": ["es2015", "stage-2", "react"],
   "env": {
-      "development": {
-          "plugins": [
-            "transform-runtime",
-            ["react-transform", {
-              "transforms": [{
-                "transform" : "react-transform-hmr",
-                "imports"   : ["react"],
-                "locals"    : ["module"]
-          }]
-        }]
-      ]
+    "development": {
+        "plugins": [
+          "transform-runtime"
+        ]
     }
   }
 }
