--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
-  "presets": ["es2015", "stage-2", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "env": {
     "development": {
         "plugins": [
-          "transform-runtime"
+          "@babel/transform-runtime"
         ]
     }
   }
