--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "url": "https://github.com/concord-consortium/geniventure-dashboard/issues"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "@babel/runtime-corejs2": "^7.4.3",
     "fixed-data-table-2": "^0.8.22",
     "lodash": "^4.17.11",
     "parse-full-name": "^1.2.3",
@@ -34,21 +35,20 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "aphrodite": "^1.2.5",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "4.6.0",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "eslint": "^3.19.0",
-    "eslint-plugin-compat": "^2.6.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-compat": "^3.1.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react": "^7.12.4",
     "npm-run-all": "^4.1.5",
     "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.6.3",
