--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "aphrodite": "^1.2.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "copy-webpack-plugin": "4.6.0",
+    "copy-webpack-plugin": "5.0.2",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-compat": "^3.1.1",
     "eslint-plugin-import": "^2.17.2",
@@ -53,7 +53,8 @@
     "react-transform-hmr": "^1.0.4",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   }
 }
