--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "parse-full-name": "^1.2.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dimensions": "^1.3.1",
     "react-dom": "^16.8.6",
     "react-portal": "^4.2.0",
+    "react-sizeme": "^2.6.7",
     "react-transition-group": "^1.2.1",
     "whatwg-fetch": "^3.0.0"
   },
